# cli2mcp

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: config.md  generators.md  models.md  parsers.md  scrapers.md
docs/user-guide/: cli-reference.md  deployment.md  generated-output.md  writing-clis.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/config/: index.html
reference/generators/: index.html
reference/models/: index.html
reference/parsers/: index.html
reference/scrapers/: index.html
search/: search_index.json
src/cli2mcp/: __init__.py  __main__.py  cli.py  config.py  models.py
tests/: test_argparse_patterns.py  test_argparse_scraper.py  test_cli.py  test_click_patterns.py  test_click_scraper.py  test_config_and_cli_enhancements.py  test_docstring_parser.py  test_docstring_styles.py  test_generator.py  test_generator_enhancements.py  test_phase3.py  test_type_mapper.py
tests/fixtures/: sample_argparse_cli.py  sample_argparse_subparsers.py  sample_click_advanced.py  sample_click_cli.py  sample_click_patterns.py  sample_docstrings.py  sample_typer_cli.py
user-guide/cli-reference/: index.html
user-guide/deployment/: index.html
user-guide/writing-clis/: index.html
(+8 files in other folders)
